<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bar"
    android:orientation="vertical"
    tools:context="loodos.sinan.com.movies.ui.MoviesActivity">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/activity_movies_searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        app:mt_hint="@string/ig_matrix"
        app:mt_maxSuggestionsCount="10"
        app:mt_placeholder="@string/search" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/movies_background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_small"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/activity_movies_imgSearch"
            android:layout_width="@dimen/img_search"
            android:layout_height="@dimen/img_search"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/ic_search"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_movies_txtEmptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_movies_imgSearch"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginStart="@dimen/padding_large"
            android:fontFamily="@string/sans_serif"
            android:text="@string/empty_view"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/activity_movies_progress_bar"
            android:layout_width="@dimen/progress"
            android:layout_height="@dimen/progress"
            android:layout_above="@id/activity_movies_imgSearch"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:indicatorColor="@color/app_bar"
            app:indicatorName="LineScaleIndicator" />
    </RelativeLayout>

</LinearLayout>
